Refine research logs layout and storage

--- a/index.html
+++ b/index.html
@@ -101,60 +101,49 @@
         <ol id="journalTimeline" class="journal-timeline" aria-live="polite"></ol>
       </section>
 
-      <section class="log-section" aria-labelledby="logHeading">
-        <div class="section-header simple">
-          <h3 id="logHeading">Research Logs</h3>
-          <button id="newLogBtn" class="circle-btn" type="button" title="New research log (L)" aria-label="New research log">＋</button>
-        </div>
-        <form id="logForm" class="card research-form inline-form" aria-label="Create or edit research log" hidden>
-          <div class="form-row">
-            <input id="logTitle" name="title" type="text" placeholder="Log title" required />
-            <input id="logDate" name="date" type="date" required />
-          </div>
-          <textarea
-            id="logDescription"
-            class="auto-resize"
-            name="description"
-            rows="1"
-            placeholder="Overview or context"
-          ></textarea>
-          <textarea
-            id="logParameters"
-            class="auto-resize"
-            name="parameters"
-            rows="1"
-            placeholder="Key parameters"
-          ></textarea>
-          <textarea
-            id="logResources"
-            class="auto-resize"
-            name="resources"
-            rows="1"
-            placeholder="Code snippets or relevant links"
-          ></textarea>
-          <div class="log-steps">
-            <div class="steps-header">
-              <h4>Operations</h4>
-              <button type="button" id="addLogStep" class="text-btn">Add step</button>
-            </div>
-            <div id="logStepsContainer" class="log-steps-container"></div>
-          </div>
-          <textarea
-            id="logResults"
-            class="auto-resize"
-            name="results"
-            rows="1"
-            placeholder="Results or observations"
-          ></textarea>
-          <div class="form-actions">
-            <button type="submit" class="btn primary">Save Log</button>
-            <button type="button" id="cancelLog" class="btn ghost">Cancel</button>
-          </div>
-        </form>
-        <ol id="logList" class="log-list" aria-live="polite"></ol>
-      </section>
     </section>
   </main>
+
+  <section class="log-board" aria-labelledby="logHeading">
+    <div class="log-board-inner">
+      <div class="section-header simple">
+        <h3 id="logHeading">Research Logs</h3>
+        <button id="newLogBtn" class="circle-btn" type="button" title="New research log (L)" aria-label="New research log">＋</button>
+      </div>
+      <form id="logForm" class="card research-form inline-form" aria-label="Create or edit research log" hidden>
+        <div class="form-row">
+          <input id="logTitle" name="title" type="text" placeholder="Log title" required />
+          <input id="logDate" name="date" type="date" required />
+        </div>
+        <textarea
+          id="logDescription"
+          class="auto-resize"
+          name="description"
+          rows="1"
+          placeholder="Overview or context"
+        ></textarea>
+        <textarea
+          id="logResults"
+          class="auto-resize"
+          name="results"
+          rows="1"
+          placeholder="Results or observations"
+        ></textarea>
+        <div class="log-steps">
+          <div class="steps-header">
+            <h4>Operations</h4>
+            <button type="button" id="addLogStep" class="text-btn">Add step</button>
+          </div>
+          <div id="logStepsContainer" class="log-steps-container"></div>
+        </div>
+        <div class="form-actions">
+          <button type="submit" class="btn primary">Save Log</button>
+          <button type="button" id="cancelLog" class="btn ghost">Cancel</button>
+        </div>
+      </form>
+      <ol id="logList" class="log-list" aria-live="polite"></ol>
+    </div>
+  </section>
 
   <section class="export-panel" aria-label="Export data">
     <h3>Export</h3>
@@ -222,8 +211,8 @@
           <div class="item-title log-title"></div>
           <div class="item-meta log-meta"></div>
           <div class="log-description"></div>
+          <div class="log-results"></div>
           <ul class="log-operations"></ul>
-          <div class="log-notes"></div>
         </div>
       </div>
       <div class="item-actions" role="group" aria-label="Research log actions">
