Shrink rating card and separate commit notes

--- a/index.html
+++ b/index.html
@@ -118,17 +118,18 @@
               ></ul>
             </div>
           </div>
-          <div class="day-rating-field">
-            <label for="dayCommitNotes">Commit</label>
-            <textarea
-              id="dayCommitNotes"
-              class="auto-resize"
-              rows="1"
-              placeholder="Highlights or summary"
-            ></textarea>
-          </div>
         </section>
       </div>
+
+      <section class="day-commit card" aria-label="Day commit notes">
+        <label class="sr-only" for="dayCommitNotes">Commit</label>
+        <textarea
+          id="dayCommitNotes"
+          class="auto-resize"
+          rows="1"
+          placeholder="Highlights or summary"
+        ></textarea>
+      </section>
 
       <section class="todo-section" aria-labelledby="todoHeading">
         <div class="section-header simple">
