Adjust day rating controls per feedback

--- a/index.html
+++ b/index.html
@@ -119,12 +119,13 @@
             </div>
           </div>
           <div class="rating-commit-line">
-            <label for="dayCommitNotes" class="rating-label">Commit:</label>
+            <label for="dayCommitNotes" class="sr-only">Commit</label>
             <textarea
               id="dayCommitNotes"
               class="auto-resize"
               rows="1"
-              placeholder="Highlights or summary"
+              placeholder="commit"
+              aria-label="Commit"
             ></textarea>
           </div>
         </section>
